backend.log

> jedire-backend-replit@1.0.0 dev
> ts-node src/index.ts

Apartment Locator AI integration initialized: https://apartment-locator-ai-real.replit.app
ApartmentDataSync initialized with URL: https://apartment-locator-ai-real.replit.app
/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/api/rest/trade-areas.routes.ts(9,20): error TS2307: Cannot find module '@turf/circle' or its corresponding type declarations.

    at createTSError (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (/home/leon/clawd/jedire/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2307 ]
}
